--- a/sbin/fsck_hammer2/fsck_hammer2.8
+++ b/sbin/fsck_hammer2/fsck_hammer2.8
@@ -32,7 +32,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd September 21, 2019
+.Dd October 2, 2019
 .Dt FSCK_HAMMER2 8
 .Os
 .Sh NAME
@@ -43,6 +43,8 @@
 .Op Fl f
 .Op Fl v
 .Op Fl q
+.Op Fl p
+.Op Fl l Ar pfs_name
 .Ar special
 .Sh DESCRIPTION
 The
@@ -58,6 +60,12 @@ Force option.
 Verbose option. Unused.
 .It Fl q
 Quiet option. Unused.
+.It Fl p
+Scan each PFS separately.
+.It Fl l
+Specify PFS to scan when
+.Fl p
+is used.
 .El
 .Sh SEE ALSO
 .Xr fsck 8 ,
