sbin/fsck_hammer2: Print blockref stats once if -q
Better with this when redirecting output.

--- a/sbin/fsck_hammer2/fsck_hammer2.8
+++ b/sbin/fsck_hammer2/fsck_hammer2.8
@@ -57,9 +57,9 @@ There is currently no file system repairing.
 .It Fl f
 Force option.
 .It Fl v
-Verbose option. Unused.
+Verbose option.
 .It Fl q
-Quiet option. Unused.
+Quiet option.
 .It Fl p
 Scan each PFS separately.
 .It Fl l
