--- a/lib/libc/gen/strtofflags.3
+++ b/lib/libc/gen/strtofflags.3
@@ -27,9 +27,8 @@
 .\"
 .\"     @(#)setmode.3	8.2 (Berkeley) 4/28/95
 .\" $FreeBSD: src/lib/libc/gen/strtofflags.3,v 1.5.2.3 2001/12/14 18:33:51 ru Exp $
-.\" $DragonFly: src/lib/libc/gen/strtofflags.3,v 1.3 2007/06/30 19:03:52 swildner Exp $
 .\"
-.Dd January 1, 2000
+.Dd November 6, 2019
 .Dt STRTOFFLAGS 3
 .Os
 .Sh NAME
@@ -41,9 +40,9 @@
 .Sh SYNOPSIS
 .In unistd.h
 .Ft char *
-.Fn fflagstostr "u_long flags"
+.Fn fflagstostr "unsigned long flags"
 .Ft int
-.Fn strtofflags "char **stringp" "u_long *setp" "u_long *clrp"
+.Fn strtofflags "char **stringp" "unsigned long *setp" "unsigned long *clrp"
 .Sh DESCRIPTION
 The
 .Fn fflagstostr
