drm: Remove mentions of i915kms and radeonkms
drm(4) drivers are simply named i915 and radeon like on Linux now.

--- a/share/man/man4/drm.4
+++ b/share/man/man4/drm.4
@@ -207,8 +207,8 @@ feature) is set in the device driver.
 .El
 .Sh SEE ALSO
 .Xr Xorg 1 ,
-.Xr i915kms 4 ,
-.Xr radeonkms 4 ,
+.Xr i915 4 ,
+.Xr radeon 4 ,
 .Xr xorg.conf 5
 .Sh HISTORY
 DRM was first available for Linux.
