--- a/share/man/man4/radeonkms.4
+++ b/share/man/man4/radeonkms.4
@@ -28,11 +28,11 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd November 20, 2015
-.Dt RADEONKMS 4
+.Dd October 9, 2019
+.Dt RADEON 4
 .Os
 .Sh NAME
-.Nm radeonkms
+.Nm radeon
 .Nd Driver for AMD/ATI Radeon graphics chipsets
 .Sh DESCRIPTION
 The
