--- a/sbin/fsck_hammer2/fsck_hammer2.8
+++ b/sbin/fsck_hammer2/fsck_hammer2.8
@@ -32,7 +32,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd October 6, 2019
+.Dd October 14, 2019
 .Dt FSCK_HAMMER2 8
 .Os
 .Sh NAME
@@ -59,6 +59,7 @@ There is currently no file system repairing.
 Force option.
 .It Fl v
 Verbose option.
+Print blockref data on failure if possible.
 .It Fl q
 Quiet option.
 .It Fl b
