--- a/sbin/fsck_hammer2/fsck_hammer2.8
+++ b/sbin/fsck_hammer2/fsck_hammer2.8
@@ -32,7 +32,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd October 14, 2019
+.Dd October 19, 2019
 .Dt FSCK_HAMMER2 8
 .Os
 .Sh NAME
@@ -74,8 +74,8 @@ is used.
 .Sh SEE ALSO
 .Xr fsck 8 ,
 .Xr hammer2 8 ,
-.Xr newfs_hammer2 8 ,
-.Xr mount_hammer2 8
+.Xr mount_hammer2 8 ,
+.Xr newfs_hammer2 8
 .Sh HISTORY
 The
 .Nm
