--- a/sbin/fsck_hammer2/fsck_hammer2.8
+++ b/sbin/fsck_hammer2/fsck_hammer2.8
@@ -32,7 +32,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd October 19, 2019
+.Dd October 21, 2019
 .Dt FSCK_HAMMER2 8
 .Os
 .Sh NAME
@@ -43,6 +43,7 @@
 .Op Fl f
 .Op Fl v
 .Op Fl q
+.Op Fl e
 .Op Fl b
 .Op Fl p
 .Op Fl l Ar pfs_name
@@ -53,7 +54,6 @@ The
 utility verifies
 .Tn HAMMER2
 file system.
-There is currently no file system repairing.
 .Bl -tag -width indent
 .It Fl f
 Force option.
@@ -62,6 +62,8 @@ Verbose option.
 Print blockref data on failure if possible.
 .It Fl q
 Quiet option.
+.It Fl e
+Count empty blockrefs.
 .It Fl b
 Scan only best zone.
 .It Fl p
