sbin/fsck_hammer2: Allow -l to take multiple PFS names

--- a/sbin/fsck_hammer2/fsck_hammer2.8
+++ b/sbin/fsck_hammer2/fsck_hammer2.8
@@ -69,7 +69,7 @@ Scan only best zone.
 .It Fl p
 Scan each PFS separately.
 .It Fl l
-Specify PFS to scan when
+Specify PFS names when
 .Fl p
 is used.
 .El
