--- a/sbin/fsck_hammer2/fsck_hammer2.8
+++ b/sbin/fsck_hammer2/fsck_hammer2.8
@@ -32,7 +32,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd October 21, 2019
+.Dd October 22, 2019
 .Dt FSCK_HAMMER2 8
 .Os
 .Sh NAME
@@ -46,7 +46,7 @@
 .Op Fl e
 .Op Fl b
 .Op Fl p
-.Op Fl l Ar pfs_name
+.Op Fl l Ar pfs_names
 .Ar special
 .Sh DESCRIPTION
 The
