dsynth.1: Fix wording (reported by noob237).

--- a/usr.bin/dsynth/dsynth.1
+++ b/usr.bin/dsynth/dsynth.1
@@ -32,7 +32,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd August 21, 2019
+.Dd October 24, 2019
 .Dt DSYNTH 1
 .Os
 .Sh NAME
@@ -53,7 +53,7 @@ The
 utility allows a user to build and maintain part or all of dports
 locally.
 .Nm
-figures out the dependency topology of the dport(s) you
+figures out the dependency topology of the dport(s) for you and
 is capable of building any number of ports concurrently based
 on the configuration parameters you supply.
 .Pp
