--- a/sbin/fsck_hammer2/fsck_hammer2.8
+++ b/sbin/fsck_hammer2/fsck_hammer2.8
@@ -32,7 +32,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd October 22, 2019
+.Dd October 30, 2019
 .Dt FSCK_HAMMER2 8
 .Os
 .Sh NAME
@@ -47,6 +47,7 @@
 .Op Fl b
 .Op Fl p
 .Op Fl l Ar pfs_names
+.Op Fl c Ar cache_count
 .Ar special
 .Sh DESCRIPTION
 The
@@ -72,6 +73,8 @@ Scan each PFS separately.
 Specify PFS names when
 .Fl p
 is used.
+.It Fl c
+Specify blockref cache count.
 .El
 .Sh SEE ALSO
 .Xr fsck 8 ,
