calendar(1): Significant update to calendars from OpenBSD
* The calendars were obtained from OpenBSD as of 2019-02-19
* Generally, OpenBSD has more entries and more accurate, but FreeBSD has
  also updated some entries and fixed some mistakes.
* I cross-checked most mismatching entries by searching the Internet and
  also fixed several mistakes.
* NOTE: there can certainly exist quite some mistakes because I cannot
  thoroughly check all of them.

--- a/usr.bin/calendar/calendar.1
+++ b/usr.bin/calendar/calendar.1
@@ -28,7 +28,7 @@
 .\"     @(#)calendar.1  8.1 (Berkeley) 6/29/93
 .\" $FreeBSD: head/usr.bin/calendar/calendar.1 314436 2017-02-28 23:42:47Z imp $
 .\"
-.Dd February 19, 2019
+.Dd November 2, 2019
 .Dt CALENDAR 1
 .Os
 .Sh NAME
@@ -242,6 +242,8 @@ Calendar of events in Australia.
 Births and deaths of famous (and not-so-famous) people.
 .It Pa calendar.brazilian
 Calendar of events in Brazil.
+.It Pa calendar.canada
+Canadian holidays.
 .It Pa calendar.christian
 Christian holidays.
 This calendar should be updated yearly by the local system administrator
@@ -250,17 +252,22 @@ so that roving holidays are set correctly for the current year.
 Days of special significance to computer people.
 .It Pa calendar.croatian
 Calendar of events in Croatia.
+.It Pa calendar.discord
+Discordian calendar (all rites reversed).
 .It Pa calendar.dragonfly
-The birthday of
-.Dx .
+.Dx
+related events.
 .It Pa calendar.dutch
 Calendar of events in the Netherlands.
+.It Pa calendar.fictional
+Fantasy and fiction dates (mostly
+.Em Load Of The Rings ) .
 .It Pa calendar.french
 Calendar of events in France.
 .It Pa calendar.german
 Calendar of events in Germany.
 .It Pa calendar.history
-Everything else, mostly U.S.\& historical events.
+Miscellaneous history.
 .It Pa calendar.holiday
 Other holidays, including the not-well-known, obscure, and
 .Em really
@@ -273,18 +280,23 @@ This calendar should be updated yearly by the local system administrator
 so that roving holidays are set correctly for the current year.
 The entries for this calendar have been obtained from the port
 .Pa deskutils/hebcal .
-.It Pa calendar.lotr
-Calendar of events in
-.Em Load Of The Rings .
 .It Pa calendar.music
 Musical events, births, and deaths.
-Strongly oriented toward rock 'n' roll.
+Strongly oriented toward rock 'n' roll and classical.
 .It Pa calendar.newzealand
 Calendar of events in New Zealand.
 .It Pa calendar.russian
 Russian calendar.
 .It Pa calendar.southafrica
 Calendar of events in South Africa.
+.It Pa calendar.space
+Aerospace and astronomical events.
+.It Pa calendar.uk
+Calendar of events in U.K.
+.It Pa calendar.ukrainian
+Calendar of events in Ukraine.
+.It Pa calendar.ushistory
+U.S.\& history.
 .It Pa calendar.usholiday
 U.S.\& holidays.
 This calendar should be updated yearly by the local system administrator
