--- a/share/man/man4/termios.4
+++ b/share/man/man4/termios.4
@@ -28,7 +28,7 @@
 .\"	@(#)termios.4	8.4 (Berkeley) 4/19/94
 .\" $FreeBSD: src/share/man/man4/termios.4,v 1.12.2.9 2001/12/17 11:30:12 ru Exp $
 .\"
-.Dd December 31, 2017
+.Dd October 31, 2019
 .Dt TERMIOS 4
 .Os
 .Sh NAME
@@ -1064,8 +1064,14 @@ and are composed of the following masks:
 */
 .It Dv OCRNL
 /* map CR to NL */
-.It Dv OXTABS
+.It Dv TABDLY
+/* tab delay mask */
+.It Dv TAB0
+/* no tab delay and expansion */
+.It Dv TAB3
 /* expand tabs to spaces */
+.It Dv OXTABS
+/* alias for TAB3 */
 .It Dv ONOEOT
 /* discard
 .Dv EOT Ns 's
