sigblockall.3/sigprocmask.2: Various small fixes/markup improvements.

--- a/lib/libc/sys/sigprocmask.2
+++ b/lib/libc/sys/sigprocmask.2
@@ -108,9 +108,9 @@ has a value other than those listed here.
 .Xr sigaction 2 ,
 .Xr sigsuspend 2 ,
 .Xr fpsetmask 3 ,
-.Xr sigsetops 3 ,
 .Xr sigblockall 3 ,
-.Xr sigunblockall 3 ,
+.Xr sigsetops 3 ,
+.Xr sigunblockall 3
 .Sh STANDARDS
 The
 .Fn sigprocmask
