autofs: Change email address (sync with FUSE and others)

--- a/usr.sbin/autofs/auto_master.5
+++ b/usr.sbin/autofs/auto_master.5
@@ -382,7 +382,7 @@ The
 configuration file functionality was ported to
 .Dx
 by
-.An Tomohiro Kusumi Aq Mt kusumi.tomohiro@gmail.com .
+.An Tomohiro Kusumi Aq Mt tkusumi@netbsd.org .
 Donated to DragonFlyBSD by PeerCorps Trust Fund.
 .Sh BUGS
 .Pa /etc/autofs/special_media
