--- a/usr.sbin/autofs/autounmountd.8
+++ b/usr.sbin/autofs/autounmountd.8
@@ -97,5 +97,5 @@ The
 was ported to
 .Dx
 by
-.An Tomohiro Kusumi Aq Mt kusumi.tomohiro@gmail.com .
+.An Tomohiro Kusumi Aq Mt tkusumi@netbsd.org .
 Donated to DragonFlyBSD by PeerCorps Trust Fund.
