--- a/usr.sbin/fstyp/fstyp.8
+++ b/usr.sbin/fstyp/fstyp.8
@@ -141,7 +141,7 @@ The
 utility was ported to
 .Dx
 by
-.An Tomohiro Kusumi Aq Mt kusumi.tomohiro@gmail.com .
+.An Tomohiro Kusumi Aq Mt tkusumi@netbsd.org .
 Donated to DragonFlyBSD by PeerCorps Trust Fund.
 .Sh BUGS
 The
