--- a/share/man/man5/autofs.5
+++ b/share/man/man5/autofs.5
@@ -108,7 +108,7 @@ The
 was ported to
 .Dx
 by
-.An Tomohiro Kusumi Aq Mt kusumi.tomohiro@gmail.com .
+.An Tomohiro Kusumi Aq Mt tkusumi@netbsd.org .
 Donated to DragonFlyBSD by PeerCorps Trust Fund.
 .Sh BUGS
 The
