--- a/usr.sbin/autofs/automountd.8
+++ b/usr.sbin/autofs/automountd.8
@@ -113,5 +113,5 @@ The
 was ported to
 .Dx
 by
-.An Tomohiro Kusumi Aq Mt kusumi.tomohiro@gmail.com .
+.An Tomohiro Kusumi Aq Mt tkusumi@netbsd.org .
 Donated to DragonFlyBSD by PeerCorps Trust Fund.
