sys/dev/disk/dm: Change email address (sync with autofs/FUSE and others)

--- a/share/man/man4/dm_target_flakey.4
+++ b/share/man/man4/dm_target_flakey.4
@@ -2,7 +2,7 @@
 .\" All rights reserved.
 .\"
 .\" This code is derived from software contributed to The DragonFly BSD Project
-.\" by Tomohiro Kusumi <kusumi.tomohiro@gmail.com>
+.\" by Tomohiro Kusumi <tkusumi@netbsd.org>
 .\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
@@ -122,4 +122,4 @@ The
 target first appeared in
 .Dx 4.3 .
 .Sh AUTHORS
-.An Tomohiro Kusumi
+.An Tomohiro Kusumi Aq Mt tkusumi@netbsd.org
