--- a/sbin/mount_autofs/mount_autofs.8
+++ b/sbin/mount_autofs/mount_autofs.8
@@ -22,7 +22,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd January 22, 2018
+.Dd November 22, 2019
 .Dt MOUNT_AUTOFS 8
 .Os
 .Sh NAME
@@ -44,17 +44,68 @@ command is ported from
 This is intended to be a low level mount command for
 .Xr autofs 5 .
 .Pp
-Note that
+The
+.Nm
+command should not usually be called by admins.
+Use
+.Xr automount 8
+instead.
 .Xr autofs 5
 is mountable using
-.Xr automount 8
-which incorporates
+.Xr automount 8 ,
+which incorporates an
 .Xr auto_master 5
 parser, without having to specify
 .Xr autofs 5
 mount options via command line.
 .\" and that was the original intention of FreeBSD/autofs.
 .\" This is a low level version without auto_master(5) involved.
+.Pp
+The
+.Nm
+command attaches the automounter filesystem on the
+.Ar autofs
+device on to the file system tree at point
+.Ar mount_point .
+Both
+.Ar autofs
+and
+.Ar mount_point
+are converted to absolute paths before use.
+.Pp
+This command is normally executed by
+.Xr automount 8 .
+The options are as follows:
+.Bl -tag -width Ds
+.It Fl f
+Set the
+.Ar from
+location for
+.Xr autofs 5 .
+This argument is usually read from
+.Pa /etc/auto_master
+by
+.Xr automount 8 .
+.It Fl o
+Set the mount options.
+See the
+.Xr mount 8
+man page for possible options and their meanings.
+.It Fl O
+Set the
+.Xr autofs 5
+options.
+See the
+.Op Fl Ar options
+in
+.Sx AUTO_MASTER SYNTAX
+of
+.Xr auto_master 5 .
+.It Fl p
+Set the
+.Xr autofs 5
+prefix, below which the file system(s) will be mounted.
+.Pp
 .Sh SEE ALSO
 .Xr autofs 5 ,
 .Xr auto_master 5 ,
@@ -70,5 +121,3 @@ The
 .Nm
 utility first appeared in
 .Dx 5.1 .
-.Sh BUGS
-This page was created because otherwise compilation fails.
