--- a/sbin/mount_autofs/mount_autofs.8
+++ b/sbin/mount_autofs/mount_autofs.8
@@ -22,7 +22,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd November 22, 2019
+.Dd November 24, 2019
 .Dt MOUNT_AUTOFS 8
 .Os
 .Sh NAME
@@ -37,13 +37,6 @@
 .Ar autofs
 .Ar mount_point
 .Sh DESCRIPTION
-The
-.Nm
-command is ported from
-.Nx .
-This is intended to be a low level mount command for
-.Xr autofs 5 .
-.Pp
 The
 .Nm
 command should not usually be called by admins.
@@ -121,3 +114,10 @@ The
 .Nm
 utility first appeared in
 .Dx 5.1 .
+.Sh AUTHORS
+The
+.Nm
+was ported to
+.Dx
+by
+.An Tomohiro Kusumi Aq Mt tkusumi@netbsd.org .
